--- a/Proyecto1/css/estilo.css
+++ b/Proyecto1/css/estilo.css
@@ -14,7 +14,7 @@
    
 /* Tablas */
    TH {font-size: 10pt; font-weight: bold; color: white; background: #0066CC; text-align: left;}
-   TD {font-size: 10pt; background: #CCCCCC;}
+   TD {font-size: 10pt; background: #CCCCCC; margin: 10px;}
    TD.derecha {font-size: 10pt; text-align: right; background: #FFFFFF;}
    TD.izquierda {font-size: 10pt; text-align: left; background: #FFFFFF;}
 
